--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -345,10 +345,10 @@ th.desc a {
     background: #fff url(../images/skin/shadow.jpg) bottom repeat-x;
     border: 1px solid #ccc;
     color: #666;
-    font-size: 10px;
+    font-size: 12px;
     margin-top: 5px;
     overflow: hidden;
-    padding: 0;
+    padding: 6px;
 }
 
 .buttons input {
